	always use match for enums (no switch even if constant)
	fixed DateTools.format %I and %l in Flash/JS
	securized Hash for JS and Flash
	compiletime F9 class generation for F8 swflib
	optimized for loops (Array and IntIter)
	added #line support
	more f9 Null<T> support for "if" and array declarations
	more neko.Web.setCookie parameters
	added "inline" for methods and static vars

2007-10-31: 1.16
	use _sans font for default flash traces (better Linux support)
	fixed haxe.remoting.Connection compilation for Flash<8
	added fix to prevent 64K identifiers limit on Flash<9
	ensure order of anonymous fields initialization
	fixed haxe.remoting.Connection.urlConnect in JS
	use amortized O(1) for Neko Array implementation
	ndlls libraries should now use .neko() instead of __a
	allowed 'u' utf8 for regexp (needs Neko 1.6.1 regexp.ndll on windows)
	onclick and onsubmit JS events returns Bool
	fixed inherited constructor of extern class was always private
	fixed Ereg.split without 'g' flag on JS/Flash9
	fixed haxe.Stack in JS without -debug
	added support for -D no-swf-compress
	fixed ByteArray.readObject
	fixed implements Dynamic in Flash9
	removed neko.io.FileInput.eof, fixed neko.io.Input.readLine
	fixed haxe.Template for Flash9
	added neko.Sys.command optional array of arguments
	removed haxe.Proxy
	added flash.XMLRequest
	fixed Type.enumParameters for Neko
	guaranteed order of Type.getEnumConstructs same as code
	used index-based dispatch for enums
	added Type.enumIndex
	fixed enum.toString for Flash and JS
	support for -Dnetwork-sandbox
	trim -cp and -resource
	various genas3 fixes

2007-08-29: 1.15
	fixed bug with Enum.construct when Enum have type parameters
	change with "untyped" : arguments types are checked (because of opt select)
	haxedoc : fixed type parameters display
	fix for JS and Flash9 XML parser : allow newlines in attributes
	disable Flash9 resources with AS3Gen
	error on extra anonymous fields