@@ -23,6 +23,7 @@
 	more f9 Null<T> support for "if" and array declarations
 	more neko.Web.setCookie parameters
 	added "inline" for methods and static vars
+	fixed % type in flash9
 
 2007-10-31: 1.16
 	use _sans font for default flash traces (better Linux support)
